fixed body x overflow hide

--- a/themes/custom/wristcheck_barrio/scss/wc.scss
+++ b/themes/custom/wristcheck_barrio/scss/wc.scss
@@ -49,6 +49,8 @@
 body {
   background-color: $body_bg;
   font-family: "basis-grotesque-pro", "Helvetica", "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Arial, sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 input, button, select, optgroup, textarea {
